# shop/openapi.yaml
@@ -3,37 +3,133 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
-    description: The greeting service definition.
+    title: Shop API
+    description: The Shop service definition.
     version: 0.0.1
 paths:
-    /helloworld/{name}:
+    /api/users/captcha:
         get:
             tags:
-                - Greeter
-                - subgroup
-            description: Sends a greeting
-            operationId: Greeter_SayHello
-            parameters:
-                - name: name
-                  in: path
-                  required: true
-                  schema:
-                    type: string
+                - Shop
+            operationId: Shop_Captcha
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
+                                $ref: '#/components/schemas/shop.shop.v1.CaptchaReply'
+    /api/users/detail:
+        get:
+            tags:
+                - Shop
+            operationId: Shop_Detail
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/shop.shop.v1.UserDetailResponse'
+    /api/users/login:
+        post:
+            tags:
+                - Shop
+            operationId: Shop_Login
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/shop.shop.v1.LoginReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/shop.shop.v1.RegisterReply'
+    /api/users/register:
+        post:
+            tags:
+                - Shop
+            operationId: Shop_Register
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/shop.shop.v1.RegisterReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/shop.shop.v1.RegisterReply'
 components:
     schemas:
-        helloworld.v1.HelloReply:
+        shop.shop.v1.CaptchaReply:
             type: object
             properties:
-                message:
+                captchaId:
                     type: string
-            description: The response message containing the greetings
+                picPath:
+                    type: string
+        shop.shop.v1.LoginReq:
+            type: object
+            properties:
+                mobile:
+                    type: string
+                password:
+                    type: string
+                captcha:
+                    type: string
+                captchaId:
+                    type: string
+        shop.shop.v1.RegisterReply:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                mobile:
+                    type: string
+                username:
+                    type: string
+                token:
+                    type: string
+                expiredAt:
+                    type: integer
+                    format: int64
+            description: Data returned by registration and login
+        shop.shop.v1.RegisterReq:
+            type: object
+            properties:
+                mobile:
+                    type: string
+                username:
+                    type: string
+                password:
+                    type: string
+        shop.shop.v1.UserDetailResponse:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                mobile:
+                    type: string
+                nickName:
+                    type: string
+                birthday:
+                    type: integer
+                    format: int64
+                gender:
+                    type: string
+                role:
+                    type: integer
+                    format: int32
+            description: user Detail returned
 tags:
-    - name: Greeter
+    - name: Shop
